--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
             <div class="py=5">
                 <h2 class="text-center" id="gthelpid"><u>GetHelp</u></h2>     
                     <div class="w-50 m-auto">
-                        <form action="index.html"     method="POST">
+                        <form action="index.html">
                             <div class="form-group">
                                 <label>Name</label>
                                 <input type="text" name="user" autocomplete="off" class="form-control">
