--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html>
 <head>
 <title>  </title>    
-                          
-   
+     <style>    html {
+        scroll-behavior: smooth;
+    }
+  </style>
    
     <!-------------link test------php include 'main.php'; ?>-- php include 'link/link.php'; ?> -- php include 'css/style.php'; ?>--->
     
